# sic2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/skills/python-testing/: SKILL.md
.github/skills/python-testing/assets/: conftest.py  test_example.py
.github/skills/python-testing/references/: fixtures.md  mocking.md  structure.md
.github/workflows/: ci.yml
src/sic2/: __init__.py  __main__.py  cli.py  reporter.py  rules.py  scanner.py
tests/: __init__.py  test_rules.py  test_scanner.py
